service-webapp-svc.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"webapp-scv"},"name":"webapp-svc","namespace":"default"},"spec":{"ports":[{"port":80}],"selector":{"app":"webapp"},"type":"NodePort"}}
  creationTimestamp: "2020-10-24T13:23:48Z"
  labels:
    app: webapp-scv
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2020-10-24T13:23:48Z"
  name: webapp-svc
  namespace: default
  resourceVersion: "702493"
  selfLink: /api/v1/namespaces/default/services/webapp-svc
  uid: 99c70fa0-3730-4176-8cb9-59e576d1381e
spec:
  clusterIP: 10.152.183.24
  clusterIPs:
  - 10.152.183.24
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30948
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
